[package]
name = "vdctl"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.69"
clap = { version = "4.1.6", features = ["derive"] }
hcl-rs = "0.12.3"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.93"
toml = "0.7.2"
